force-app/main/default/objects/Lead/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authority</label>
    <type>Checkbox</type>
</CustomField>