force-app/main/default/objects/Lead/fields/Authority_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Authority_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authority Confirmed</label>
    <type>Checkbox</type>
</CustomField>