force-app/main/default/objects/Lead/fields/batch_Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>batch_Email_Formula__c</fullName>
    <formula>IF( ISNULL(StageComparisonDate__c),null, StageComparisonDate__c + 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>batch Email Formula</label>
    <type>Date</type>
</CustomField>