force-app/main/default/objects/Lead/fields/batch_field_check__c.field-meta.xml
<CustomField>
    <fullName>batch_field_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>delete_batch field check</label>
    <type>Checkbox</type>
</CustomField>