force-app/main/default/objects/Lead/fields/batch_Field_Update__c.field-meta.xml
<CustomField>
    <fullName>batch_Field_Update__c</fullName>
    <formula>IF(  ISNULL(StageComparisonDate__c ), Null, StageComparisonDate__c +15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>batch Field Update</label>
    <type>Date</type>
</CustomField>