force-app/main/default/objects/Lead/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Budget</label>
    <type>Checkbox</type>
</CustomField>