force-app/main/default/objects/Lead/fields/Budgeted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Amount__c</fullName>
    <inlineHelpText>Do you know how much has been budgeted? If so, enter amount here.</inlineHelpText>
    <label>Budgeted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>