force-app/main/default/objects/Lead/fields/Competitively_Vended__c.field-meta.xml
<CustomField>
    <fullName>Competitively_Vended__c</fullName>
    <label>Vended/Unvended</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vended</fullName>
            </value>
            <value>
                <fullName>Unvended</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>