force-app/main/default/objects/Lead/fields/Converted_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Converted_Contact_Id__c</fullName>
    <description>Holds value of Converted Contact Id (System field)</description>
    <formula>ConvertedContactId</formula>
    <label>Converted Contact Id</label>
    <type>Text</type>
</CustomField>