force-app/main/default/objects/Lead/fields/Converted_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Converted_To_Account__c</fullName>
    <description>To restrict the lead to convert into existing sanctioned account, this value will be stamped in Converted Accounts.</description>
    <formula>&apos;Converted&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted To Account</label>
    <type>Text</type>
</CustomField>