force-app/main/default/objects/Lead/fields/ConvertedFromLead__c.field-meta.xml
<CustomField>
    <fullName>ConvertedFromLead__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ConvertedFromLead</label>
    <type>Checkbox</type>
</CustomField>