force-app/main/default/objects/Lead/fields/Create_Date_Rolling_Month__c.field-meta.xml
<CustomField>
    <fullName>Create_Date_Rolling_Month__c</fullName>
    <description>calculated field that allows for rolling  month filter. Numbers the preceding months sequentially- current month is &apos;0&apos; and last month is &apos;1&apos;.</description>
    <formula>IF ( 
YEAR( TODAY() )  &gt;  YEAR(DATEVALUE(CreatedDate)),
(MONTH( TODAY()) - MONTH( DATEVALUE(CreatedDate))  + ((YEAR( TODAY() ) - YEAR(DATEVALUE(CreatedDate))) * 12) )  , MONTH( TODAY()) - MONTH( DATEVALUE(CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Date Rolling Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>