force-app/main/default/objects/Lead/fields/Current_DB_R_Solution__c.field-meta.xml
<CustomField>
    <fullName>Current_DB_R_Solution__c</fullName>
    <label>Current DB&amp;R Solution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acronis</fullName>
            </value>
            <value>
                <fullName>Ahsay</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Amerivault</fullName>
            </value>
            <value>
                <fullName>Archive America</fullName>
            </value>
            <value>
                <fullName>Asigra</fullName>
            </value>
            <value>
                <fullName>Atempo</fullName>
            </value>
            <value>
                <fullName>Attix5</fullName>
            </value>
            <value>
                <fullName>Barracuda</fullName>
            </value>
            <value>
                <fullName>Carbonite</fullName>
            </value>
            <value>
                <fullName>Cintas</fullName>
            </value>
            <value>
                <fullName>Clearwell</fullName>
            </value>
            <value>
                <fullName>CommVault</fullName>
            </value>
            <value>
                <fullName>Corovan</fullName>
            </value>
            <value>
                <fullName>DataPros</fullName>
            </value>
            <value>
                <fullName>Datasafe Inc</fullName>
            </value>
            <value>
                <fullName>Datasite</fullName>
            </value>
            <value>
                <fullName>EMC</fullName>
            </value>
            <value>
                <fullName>eVault</fullName>
            </value>
            <value>
                <fullName>Fireproof</fullName>
            </value>
            <value>
                <fullName>First Federal</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>GRM</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>i365</fullName>
            </value>
            <value>
                <fullName>iBackup</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>Intronis</fullName>
            </value>
            <value>
                <fullName>Iron Mountain</fullName>
            </value>
            <value>
                <fullName>Mozy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>