force-app/main/default/objects/Lead/fields/Current_Scanning_Solution__c.field-meta.xml
<CustomField>
    <fullName>Current_Scanning_Solution__c</fullName>
    <label>Current Scanning Solution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>Iron Mountain</fullName>
            </value>
            <value>
                <fullName>Nothing</fullName>
            </value>
            <value>
                <fullName>Vendor - Cintas</fullName>
            </value>
            <value>
                <fullName>Vendor - Other</fullName>
            </value>
            <value>
                <fullName>Vendor - Recall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>