force-app/main/default/objects/Lead/fields/Date_Last_Scored__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Scored__c</fullName>
    <inlineHelpText>Read Only - Fed from Eloqua</inlineHelpText>
    <label>Date Last Scored</label>
    <type>Date</type>
</CustomField>