force-app/main/default/objects/Lead/fields/Decision_Making_Process__c.field-meta.xml
<CustomField>
    <fullName>Decision_Making_Process__c</fullName>
    <label>Decision Making Process</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>