force-app/main/default/objects/Lead/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <description>Free form tex field for call disposition for easy entry in the List View of Leads</description>
    <inlineHelpText>Comments</inlineHelpText>
    <label>Disposition</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>