force-app/main/default/objects/Lead/fields/DUNs_Number__c.field-meta.xml
<CustomField>
    <fullName>DUNs_Number__c</fullName>
    <description>fed from Eloqua</description>
    <label>DUNS Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>