force-app/main/default/objects/Lead/fields/eDiscovery_Frequency__c.field-meta.xml
<CustomField>
    <fullName>eDiscovery_Frequency__c</fullName>
    <label>delete_eDiscovery Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Never</fullName>
            </value>
            <value>
                <fullName>Infrequent</fullName>
            </value>
            <value>
                <fullName>Frequent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>