force-app/main/default/objects/Lead/fields/eDiscovery_Plan__c.field-meta.xml
<CustomField>
    <fullName>eDiscovery_Plan__c</fullName>
    <label>delete_eDiscovery Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>Manual from tape</fullName>
            </value>
            <value>
                <fullName>Outsourced</fullName>
            </value>
            <value>
                <fullName>On premise eDiscovery solution from Archive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>