force-app/main/default/objects/Lead/fields/Email_Archive__c.field-meta.xml
<CustomField>
    <fullName>Email_Archive__c</fullName>
    <label>delete_Email Archive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vended - On Premise</fullName>
            </value>
            <value>
                <fullName>Vended - Hosted</fullName>
            </value>
            <value>
                <fullName>Iron Mountain - Vended</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>