force-app/main/default/objects/Lead/fields/Email_Consent_Verification__c.field-meta.xml
<CustomField>
    <fullName>Email_Consent_Verification__c</fullName>
    <formula>HYPERLINK(&quot;http://go.ironmountain.com/emailconsentverification&quot;, &quot;Email Consent Verification&quot;)</formula>
    <label>Email Consent Verification</label>
    <type>Text</type>
</CustomField>