force-app/main/default/objects/Lead/fields/Email_Continuity__c.field-meta.xml
<CustomField>
    <fullName>Email_Continuity__c</fullName>
    <label>delete_Email   Continuity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Need - Hosted</fullName>
            </value>
            <value>
                <fullName>None - Not Interested</fullName>
            </value>
            <value>
                <fullName>None - Interested</fullName>
            </value>
            <value>
                <fullName>Vended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>