force-app/main/default/objects/Lead/fields/Email_PAIN__c.field-meta.xml
<CustomField>
    <fullName>Email_PAIN__c</fullName>
    <label>delete_Email PAIN</label>
    <length>250</length>
    <type>Text</type>
</CustomField>