force-app/main/default/objects/Lead/fields/Email_Security__c.field-meta.xml
<CustomField>
    <fullName>Email_Security__c</fullName>
    <label>delete_Email Security</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Premise</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>