force-app/main/default/objects/Lead/fields/GA_Campaign__c.field-meta.xml
<CustomField>
    <fullName>GA_Campaign__c</fullName>
    <description>Case 06599114</description>
    <label>GA - Campaign - Most Recent</label>
    <length>99</length>
    <type>Text</type>
</CustomField>