force-app/main/default/objects/Lead/fields/GA_Search_Term_Original__c.field-meta.xml
<CustomField>
    <fullName>GA_Search_Term_Original__c</fullName>
    <label>GA - Search Term - Original</label>
    <length>99</length>
    <type>Text</type>
</CustomField>