force-app/main/default/objects/Lead/fields/GA_Source_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>GA_Source_Most_Recent__c</fullName>
    <description>Case 06599114</description>
    <label>GA - Source - Most Recent</label>
    <length>99</length>
    <type>Text</type>
</CustomField>