force-app/main/default/objects/Lead/fields/HipVoice_Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>HipVoice_Employee_Id__c</fullName>
    <description>Driver Employee id field populated by Eloqua for leads created by Drivers from their palm devices.</description>
    <label>Driver Employee Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>