force-app/main/default/objects/Lead/fields/IM_Additional_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>IM_Additional_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field to add an Account Manager to the Lead.</inlineHelpText>
    <label>Additional Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads3</relationshipName>
    <type>Lookup</type>
</CustomField>