force-app/main/default/objects/Lead/fields/IM_Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>IM_Disqualified_Reason__c</fullName>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Support Request</fullName>
            </value>
            <value>
                <fullName>No product / solution fit</fullName>
            </value>
            <value>
                <fullName>Too small</fullName>
            </value>
            <value>
                <fullName>Pre-opportunity pricing objection</fullName>
            </value>
            <value>
                <fullName>Not a decision maker / influencer</fullName>
            </value>
            <value>
                <fullName>Not looking to make a purchase</fullName>
            </value>
            <value>
                <fullName>Bad contact information / spam</fullName>
            </value>
            <value>
                <fullName>Non-sales inquiry</fullName>
            </value>
            <value>
                <fullName>Lead is a Competitor</fullName>
            </value>
            <value>
                <fullName>Outside service area / region</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>