force-app/main/default/objects/Lead/fields/IM_Do_Not_Mail__c.field-meta.xml
<CustomField>
    <fullName>IM_Do_Not_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Mail</label>
    <type>Checkbox</type>
</CustomField>