force-app/main/default/objects/Lead/fields/IM_External_ID__c.field-meta.xml
<CustomField>
    <fullName>IM_External_ID__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <label>Legacy ID</label>
    <type>AutoNumber</type>
</CustomField>