force-app/main/default/objects/Lead/fields/IM_How_Hear_About_Us__c.field-meta.xml
<CustomField>
    <fullName>IM_How_Hear_About_Us__c</fullName>
    <label>How did you hear about us?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Blogs</fullName>
            </value>
            <value>
                <fullName>Click to Chat</fullName>
            </value>
            <value>
                <fullName>Comment field populated with this value</fullName>
            </value>
            <value>
                <fullName>Current Customer/Investor</fullName>
            </value>
            <value>
                <fullName>Customer Service Inquiry</fullName>
            </value>
            <value>
                <fullName>Eventos</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>IM Web Site</fullName>
            </value>
            <value>
                <fullName>Internal Referral</fullName>
            </value>
            <value>
                <fullName>Linkedin</fullName>
            </value>
            <value>
                <fullName>Link from another Site</fullName>
            </value>
            <value>
                <fullName>Marketing Material</fullName>
            </value>
            <value>
                <fullName>Other (please indicate below)</fullName>
            </value>
            <value>
                <fullName>Previous Customer</fullName>
            </value>
            <value>
                <fullName>Referred by a Partner</fullName>
            </value>
            <value>
                <fullName>Revistas</fullName>
            </value>
            <value>
                <fullName>Saw your truck</fullName>
            </value>
            <value>
                <fullName>Search Engine</fullName>
            </value>
            <value>
                <fullName>Superpages</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Yahoo</fullName>
            </value>
            <value>
                <fullName>Yellow Pages</fullName>
            </value>
            <value>
                <fullName>Youtube</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>