force-app/main/default/objects/Lead/fields/IM_Industry__c.field-meta.xml
<CustomField>
    <fullName>IM_Industry__c</fullName>
    <description>We are using a custom field because the Standard field cannot take over 40 characters for picklist values.</description>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
                <label>Ecommerce</label>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Energy, Mining, Utilities</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Food and Beverages</fullName>
            </value>
            <value>
                <fullName>Government (Federal)</fullName>
            </value>
            <value>
                <fullName>Government (State or Local)</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Management Services</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Media and Advertising</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pharma and Biotech</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Retail and Wholesale</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Software and Technology</fullName>
            </value>
            <value>
                <fullName>Telecommunication</fullName>
            </value>
            <value>
                <fullName>Tourism and Leisure</fullName>
            </value>
            <value>
                <fullName>Transport, Logistics and Postal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>