force-app/main/default/objects/Lead/fields/IM_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>IM_Lead_Score__c</fullName>
    <inlineHelpText>Read Only - Fed from Eloqua</inlineHelpText>
    <label>Lead Score</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>